--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,3 +2,15 @@ body{
     background: #000;
     overflow: hidden;
 }
+
+.countdown {
+    display: flex;              /* establish flex container */
+    flex-direction: column;     /* stack flex items vertically */
+    justify-content: center;    /* center items vertically, in this case */
+    align-items: center;        /* center items horizontally, in this case */
+    height: 300px;
+    color: white; 
+    font-family: monospace; 
+    font-size: xxx-large; 
+}
+
