--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,6 @@ body{
     height: 300px;
     color: white; 
     font-family: monospace; 
-    font-size: xxx-large; 
+    font-size: x-large; 
 }
 
